# transscreen

./: .gitignore  cargo.toml
app/: Cargo.toml  tsconfig.json
app/src/: lib.rs  main.rs
app/src/async_adapter/: mod.rs
app/src/server/: mod.rs
app/src/static/: index.html  main.js
app/src/typescript_src/: main.ts
screen_cap/: Cargo.toml
screen_cap/src/: capture.rs  frame.rs  lib.rs
screen_cap/src/record/: encoded_buffer.rs  mod.rs
utils/: Cargo.toml
utils/src/: contiguous.rs  lib.rs  multibuffer.rs  threading.rs
